--- a/nginx.conf
+++ b/nginx.conf
@@ -31,18 +31,17 @@ http {
     gzip_http_version  1.0;
     gzip_comp_level    2;
     gzip_proxied       any;
-    gzip_types         text/plain text/css application/javascript text/xml application/xml
-+rss;
+    gzip_types         text/plain text/css application/javascript text/xml application/xml+rss;
     keepalive_timeout  65;
     ssl_protocols      TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers        HIGH:!aNULL:!MD5;
     client_max_body_size 80M;
     server_tokens off;
 
-    absolute_redirect  on;
+    #absolute_redirect  on;
     port_in_redirect   on;
 
-    include  "/opt/bitnami/nginx/conf/server_blocks/*.conf";
+    #include  "/opt/bitnami/nginx/conf/server_blocks/*.conf";
 
     # HTTP Server
     server {
@@ -50,6 +49,64 @@ http {
         listen  80;
 
         include  "/opt/bitnami/nginx/conf/bitnami/*.conf";
+        server_name wvtest.dquirogat.com;
+
+        location / {
+            proxy_pass https://worldvisionamericalatina.org/;
+            proxy_set_header Access-Control-Allow-Origin *;
+        }
+
+        location /ni {
+            proxy_pass https://worldvision.org.ni;
+
+            #proxy_set_header Host $http_host;
+
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+            # Habilitar la configuración de reescritura de URL para WordPress
+            proxy_set_header X-Forwarded-Proto $scheme;
+            rewrite ^/ni/(.*)$ /$1 break;
+            rewrite ^/ni$ / break;
+        
+            # Configuración adicional para manejar solicitudes estáticas en WordPress 
+        
+            location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
+                proxy_pass http://worldvision.org.ni;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                expires 30d;
+            }
+        }
+
+
+        location /ec {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-HS-Public-Host http://worldvisionamericalatina.org/;
+            proxy_pass_request_headers on;
+            proxy_set_header X-HubSpot-Trust-Forwarded-For true;
+            proxy_pass https://2623910.sites-proxy.hscoscdn00.net;
+            proxy_ssl_name http://worldvisionamericalatina.org/;
+            proxy_ssl_server_name on;
+            proxy_set_header   X-Real-IP $proxy_protocol_addr;
+            proxy_set_header   X-Forwarded-Proto  $scheme;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-HubSpot-Client-IP $proxy_protocol_addr;
+        }
+
+        location ~ ^(/hs|/_hcms|/hubfs|/hs-fs|/cs/c) {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-HS-Public-Host http://worldvisionamericalatina.org/;
+            proxy_pass_request_headers on;
+            proxy_set_header X-HubSpot-Trust-Forwarded-For true;
+            proxy_pass https://2623910.sites-proxy.hscoscdn00.net;
+            proxy_ssl_name http://worldvisionamericalatina.org/;
+            proxy_ssl_server_name on;
+            proxy_set_header   X-Real-IP  $proxy_protocol_addr;
+            proxy_set_header   X-Forwarded-Proto  $scheme;
+            proxy_set_header   X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header   X-HubSpot-Client-IP $proxy_protocol_addr;
+        }
 
         location /status {
             stub_status on;
@@ -57,12 +114,20 @@ http {
             allow 127.0.0.1;
             deny all;
         }
+   }
+
+# HTTPS server
+    server {
+        include  "/opt/bitnami/nginx/conf/bitnami/*.conf";
+        server_name wvtest.dquirogat.com;
+        listen 443 ssl;
+        ssl_certificate wvtest.dquirogat.com.crt;
+        ssl_certificate_key wvtest.dquirogat.com.key;
+        
+        location / {
+
+            proxy_pass https://worldvisionamericalatina.org/;
+            proxy_set_header Access-Control-Allow-Origin *;
+        }
     }
 }
-
-# server_name worldvisionamericalatina.org/
-# #proxy_set_header Host worldvisionamericalatina.org/;
-# include  "/opt/bitnami/nginx/conf/bitnami/*.conf";
-# location /ni {
-# proxy_pass https://www.worldvision.org.ni/;
-# }
